--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
       package="com.jonas.stopcollaboratelisten"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="Main"
+
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +28,7 @@
       </service>
              
     </application>
-    
+
     <uses-sdk android:targetSdkVersion="4" android:minSdkVersion="3"/>
 
 <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
